# wagtail-tourism

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  requirements.txt
cli/: dc.py  dj.py  main.py
config/settings/: base.py  dev.py
core/static_src/css/: config.css
core/static_src/js/: config.js
docs/: setup.md
home/: models.py
home/templates/home/: home_page.html
